# core

./: .gitignore  .stylish-haskell.yaml  LICENSE  README.md  core.cabal
app/: Main.hs
benchmark/: Bench.hs
src/Core/: Compiler.hs  LambdaLifting.hs  Language.hs  Machine.hs  Parser.hs  Prelude.hs  Pretty.hs  Scanner.hs  Utils.hs
src/Core/Language/: Prettyprint.hs
src/Language/: Core.hs
src/Language/Core/: AST.hs  Compiler.hs  Machine.hs  Parser.hs  Prelude.hs  Prettyprint.hs  Scanner.hs  Utils.hs
test/: Main.hs
test/examplePrograms/: arithmetic1.core  arithmetic2.core  casejump.core  factorial.core  fibonazzi.core  gcd.core  lambda1.core  lambda2.core  letrec.core  logical1.core  logical2.core  undefined.core
