cabal-version:      3.0
name:               core
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Meritamen
maintainer:         meritamen@sdf.org
category:           Language
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-incomplete-uni-patterns -Wno-name-shadowing -Wno-incomplete-patterns

library
    import:           warnings
    exposed-modules:  Core.Compiler
                    , Core.Language
                    , Core.Machine
                    , Core.Parser
                    , Core.Prelude
                    , Core.Scanner
                    , Core.Utils
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , containers
                    , megaparsec
                    , mtl
                    , parser-combinators
                    , prettyprinter
                    , text
                    , text-show
    hs-source-dirs:   src
    default-language: Haskell2010

executable core
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
                      base ^>=4.17.2.1
                    , core
                    , mtl
                    , text

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite core-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
                      base ^>=4.17.2.1
                    , HUnit
                    , core
                    , mtl
                    , text
